--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,19 +1,22 @@
 <div class="meals-index">
   <% if @meals.present? %>
+  <table class="table table table-hover">
+    <tr>
+      <th>Name</th>
+      <th>Edit</th>
+      <th>Destroy</th>
+    </tr>
     <% @meals.each do |meal| %>
-      <table>
-        <tr>
-          <th>Name</th>
-          <th></th>
-          <th></th>
-        </tr>
-        <tr>
-          <td><%= meal.name %></td>
-          <td><%= link_to "Show", meal_path(meal) %></td>
-          <td><%= link_to "Edit", edit_meal_path(meal) %></td>
-        </tr>
-      </table>
+      <tr>
+        <td><%= link_to "#{meal.name}", meal_path(meal) %></td>
+        <td><%= link_to "Edit", edit_meal_path(meal) %></td>
+        <td><%= link_to 'Destroy', meal_path(meal),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
+        </td>
+      </tr>
     <% end %>
+  </table>
   <% else %>
     No more meals exist gaybot. Create some.
   <% end %>
