fix cleanmeal typo

--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -20,7 +20,7 @@
   </p>
 
   <p>
-    <%= select_tag(:type, options_for_select([["Clean Meal", "Clean Meal"], ["Normal Meal, Normal Meal"]])) %>
+    <%= select_tag(:type, options_for_select([["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]])) %>
   </p>
   
  
