--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active">
+              <%= link_to "Meals", meals_path %></li>
+            <li><a href="#">Orders</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
