--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,46 @@
 
   <body>
 
+    <% if admin_signed_in? %>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+
+          <a class="navbar-brand" href="/">Bangin Meals</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li class="active">
+              <%= link_to "Meals", meals_path %></li>
+            <li><a href="#">Orders</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+          <% if admin_signed_in? %>
+            <li>
+              <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %>
+            </li>
+          <% else %>
+            <li><a href="#">Sign In</a></li>
+          <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <% end %>
+
+    <% if user_signed_in? %>
+
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -43,6 +83,8 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
+    <% end %>
 
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
