--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active">
-              <%= link_to "Meals", meals_path %></li>
-            <li><a href="#">Orders</a></li>
+              <%= link_to "Meals", admin_meals_path %></li>
+            <li>
+               <%= link_to "Orders", admin_orders_path %>
+            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
