--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -8,9 +8,9 @@
     </tr>
     <% @meals.each do |meal| %>
       <tr>
-        <td><%= link_to "#{meal.name}", meal_path(meal) %></td>
-        <td><%= link_to "Edit", edit_meal_path(meal) %></td>
-        <td><%= link_to 'Destroy', meal_path(meal),
+        <td><%= link_to "#{meal.name}", admin_meal_path(meal) %></td>
+        <td><%= link_to "Edit", admin_edit_meal_path(meal) %></td>
+        <td><%= link_to 'Destroy', admin_meal_path(meal),
               method: :delete,
               data: { confirm: 'Are you sure?' } %>
         </td>
