--- a/app/views/admin/meals/edit.html.erb
+++ b/app/views/admin/meals/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing Meal</h1>
- 
+
 <%= form_for :meal, url: admin_meal_path(@meal), method: :patch do |f| %>
- 
+
   <% if @meal.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -15,12 +15,12 @@
       </ul>
     </div>
   <% end %>
- 
+
   <p class="form-group">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </p>
- 
+
   <p class="form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
@@ -40,10 +40,21 @@
     <%= select(:meal, :type, [["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]]) %>
   </p>
 
+  <p>
+    <%= f.file_field :images, multiple: true %>
+  </p>
+
+  <p class="form-group">
+    <div class="image">
+      <%= image_tag @meal.image %>
+    </div>
+  </p>
+
+
   <p class="form-group">
     <%= f.submit %>
   </p>
- 
+
 <% end %>
- 
+
 <%= link_to 'Back', admin_meals_path %>
