--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing Meal</h1>
- 
+
 <%= form_for :meal, url: meal_path(@meal), method: :patch do |f| %>
- 
+
   <% if @meal.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -15,12 +15,12 @@
       </ul>
     </div>
   <% end %>
- 
+
   <p class="form-group">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </p>
- 
+
   <p class="form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
@@ -41,9 +41,15 @@
   </p>
 
   <p class="form-group">
+    <div class="image">
+      <%= image_tag meal.image || "hihi" %>
+    </div>
+  </p>
+
+  <p class="form-group">
     <%= f.submit %>
   </p>
- 
+
 <% end %>
- 
+
 <%= link_to 'Back', meals_path %>
