--- a/app/views/admin/meals/edit.html.erb
+++ b/app/views/admin/meals/edit.html.erb
@@ -1,60 +1,75 @@
 <h1>Editing Meal</h1>
 
-<%= form_for :meal, url: admin_meal_path(@meal), method: :patch do |f| %>
+<div class="row">
+  
+  <div class="col-xs-6">
+    <%= form_for :meal, url: admin_meal_path(@meal), method: :patch do |f| %>
 
-  <% if @meal.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@meal.errors.count, "error") %> prohibited
-        this article from being saved:
-      </h2>
-      <ul>
-        <% @meal.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <% if @meal.errors.any? %>
+        <div id="error_explanation">
+          <h2>
+            <%= pluralize(@meal.errors.count, "error") %> prohibited
+            this article from being saved:
+          </h2>
+          <ul>
+            <% @meal.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
 
-  <p class="form-group">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
+      <p class="form-group">
+        <%= f.label :name %><br>
+        <%= f.text_field :name %>
+      </p>
 
-  <p class="form-group">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
+      <p class="form-group">
+        <%= f.label :description %><br>
+        <%= f.text_area :description %>
+      </p>
 
-  <p class="form-group">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </p>
+      <p class="form-group">
+        <%= f.label :price %><br>
+        <%= f.text_field :price %>
+      </p>
 
-  <p class="form-group">
-    <%= f.label :active %><br>
-    <%= f.check_box :status, {}, "active", "inactive" %>
-  </p>
+      <p class="form-group">
+        <%= f.label :active %><br>
+        <%= f.check_box :status, {}, "active", "inactive" %>
+      </p>
 
-  <p class="form-group">
-    <%= select(:meal, :type, [["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]]) %>
-  </p>
+      <p class="form-group">
+        <%= select(:meal, :type, [["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]]) %>
+      </p>
 
-  <p>
-    <%= f.file_field :images, multiple: true %>
-  </p>
+      <p>
+        <%= f.file_field :images, multiple: true %>
+      </p>
 
-  <p class="form-group">
-    <div class="image">
-      <%= image_tag @meal.image %>
-    </div>
-  </p>
+      <p class="form-group">
+        <div class="image">
+          <%= image_tag @meal.image if @meal.image.present? %>
+        </div>
+      </p>
 
 
-  <p class="form-group">
-    <%= f.submit %>
-  </p>
 
-<% end %>
+      <p class="form-group">
+        <%= f.submit %>
+      </p>
 
-<%= link_to 'Back', admin_meals_path %>
+    <% end %>
+
+    <%= link_to 'Back', admin_meals_path %>
+  </div>
+  <div class="col-xs-6">
+    <% if @meal.images.present? %>
+      <% @meal.images.each_with_index do |image, index| %>
+        <%= image_tag image %>
+        <%= link_to "Delete", { controller: :meals, action: :delete_image, image_id: index }, method: :delete, data: { confirm: "Are you sure you want to delete this image?" } %>
+      <% end %>
+    <% end %>
+  </div>
+
+</div>
