--- a/app/views/admin/meals/index.html.erb
+++ b/app/views/admin/meals/index.html.erb
@@ -22,6 +22,6 @@
   <% end %>
 
   <div>
-    <%= link_to "Create new meal", new_meal_path %> 
+    <%= link_to "Create new meal", new_admin_meal_path %> 
   </div>
 </div>
