--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -11,4 +11,4 @@
 </table>
 
 <%= button_to "Checkout", new_order_path, method: :get %>
-<%= button_to "Empty Cart", @cart, method: :delete, data: { confirm: "Art you sure?" } %>
+<%= button_to "Empty Cart", @cart, method: :delete, data: { confirm: "Are you sure?" } %>
