--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -5,7 +5,7 @@
       order from being saved:</h2>
       <ul>
         <% @order.errors.full_messages.each do |message| %>
-          <li><%= msg %></li>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
