--- a/app/views/order_notifier_mailer/received.html.erb
+++ b/app/views/order_notifier_mailer/received.html.erb
@@ -1,5 +1,5 @@
-<h1>OrderNotifier#received</h1>
+<%= @order.name %> has ordered the following items:
 
-<p>
-  <%= @greeting %>, find me in app/views/order_notifier_mailer/received.html.erb
-</p>
+<% @order.order_meals.each do |order_meal| %>
+  <%= order_meal.meal.name %>
+<% end %>
