--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,9 +1,9 @@
 .login-wrapper {
-  padding: 140px 360px;
+  padding: 0 280px;
 }
 
 .login-logo {
-  width: 380px;
-  height: 380px;
+  width: 600px;
+  height: 500px;
   display: inline-block;
 }
