--- a/app/views/admin/meals/edit.html.erb
+++ b/app/views/admin/meals/edit.html.erb
@@ -1,9 +1,8 @@
 <h1>Editing Meal</h1>
 
-<div class="row">
-  
+<div class="row edit-meal-form clearfix">
   <div class="col-xs-6">
-    <%= form_for :meal, url: admin_meal_path(@meal), method: :patch do |f| %>
+    <%= form_for :meal, url: admin_meal_path(@meal), class: "form-horizontal", method: :patch do |f| %>
 
       <% if @meal.errors.any? %>
         <div id="error_explanation">
@@ -19,33 +18,45 @@
         </div>
       <% end %>
 
-      <p class="form-group">
-        <%= f.label :name %><br>
-        <%= f.text_field :name %>
-      </p>
+      <div class="form-group col-xs-12">
+        <%= f.label :name, class: "col-sm-2 control-label" %>
+        <div class="col-xs-10">
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+      </div>
 
-      <p class="form-group">
-        <%= f.label :description %><br>
-        <%= f.text_area :description %>
-      </p>
+      <div class="form-group col-xs-12">
+        <%= f.label :description, class: "col-sm-2 control-label" %>
+        <div class="col-xs-10">
+          <%= f.text_area :description, class: "form-control" %>
+        </div>
+      </div>
 
-      <p class="form-group">
-        <%= f.label :price %><br>
-        <%= f.text_field :price %>
-      </p>
+      <div class="form-group col-xs-12">
+        <%= f.label :price, class: "col-sm-2 control-label" %>
+        <div class="col-xs-10">
+          <%= f.text_field :price, class: "form-control" %>
+        </div>
+      </div>
 
-      <p class="form-group">
-        <%= f.label :active %><br>
-        <%= f.check_box :status, {}, "active", "inactive" %>
-      </p>
+      <div class="form-group col-xs-12">
+        <%= f.label :active, class: "col-sm-2 control-label" %>
+        <div class="col-xs-10">
+          <%= f.check_box :status, {}, "active", "inactive"   %>
+        </div>
+      </div>
 
-      <p class="form-group">
-        <%= select(:meal, :type, [["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]]) %>
-      </p>
+      <div class="form-group col-xs-12">
+        <div class="col-md-3 col-md-offset-2">
+          <%= select(:meal, :type, [["Clean Meal", "CleanMeal"], ["Specialty Meal", "SpecialtyMeal"]]) %>
+        </div>
+      </div>
 
-      <p>
-        <%= f.file_field :images, multiple: true %>
-      </p>
+      <div class="form-group col-xs-12">
+        <div class="col-md-3 col-md-offset-2">
+          <%= f.file_field :images, multiple: true %>
+        </div>
+      </div>
 
       <p class="form-group">
         <div class="image">
@@ -53,23 +64,30 @@
         </div>
       </p>
 
+      <div class="form-group col-xs-12">
+        <div class="col-md-3 col-md-offset-2">
+          <%= f.submit "Submit", class: "btn btn-default" %>
+        </div>
+      </div>
 
-
-      <p class="form-group">
-        <%= f.submit %>
-      </p>
-
+      <div class="form-group col-md-8 col-md-offset-4">
+        <%= link_to 'Back', admin_meals_path,
+            class: "btn btn-default",
+            role: "button" %>
+      </div>
     <% end %>
-
-    <%= link_to 'Back', admin_meals_path %>
   </div>
+
   <div class="col-xs-6">
     <% if @meal.images.present? %>
       <% @meal.images.each_with_index do |image, index| %>
-        <%= image_tag image %>
-        <%= link_to "Delete", { controller: :meals, action: :delete_image, image_id: index }, method: :delete, data: { confirm: "Are you sure you want to delete this image?" } %>
+        <div class="col-xs-4">
+          <%= image_tag image, class: "img-responsive" %>
+          <%= link_to "Delete", { controller: :meals, action: :delete_image, image_id: index },
+              method: :delete,
+              data: { confirm: "Are you sure you want to delete this image?" } %>
+        </div>
       <% end %>
     <% end %>
   </div>
-
 </div>
