--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,80 +12,80 @@
 
     <% if admin_signed_in? %>
 
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+      <nav class="navbar navbar-default navbar-static-top">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed"
+                                  data-toggle="collapse"
+                                  data-target="#bs-example-navbar-collapse-1"
+                                  aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 
-          <a class="navbar-brand" href="/">Bangin Meals</a>
-        </div>
+            <a class="navbar-brand" href="/">Bangin Meals</a>
+          </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <%= link_to "Meals", admin_meals_path %></li>
-            <li>
-               <%= link_to "Orders", admin_orders_path %>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-          <% if admin_signed_in? %>
-            <li>
-              <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %>
-            </li>
-          <% else %>
-            <li><a href="#">Sign In</a></li>
-          <% end %>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active">
+                <%= link_to "Meals", admin_meals_path %></li>
+              <li>
+                 <%= link_to "Orders", admin_orders_path %>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            <% if admin_signed_in? %>
+              <li>
+                <%= link_to 'Sign Out', destroy_admin_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li><a href="#">Sign In</a></li>
+            <% end %>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
 
-    <% end %>
+    <% else %>
 
-    <% if user_signed_in? %>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
 
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+            <a class="navbar-brand" href="/">Bangin Meals</a>
+          </div>
 
-          <a class="navbar-brand" href="/">Bangin Meals</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active">
-              <%= link_to "Meals", meals_path %></li>
-            <li><a href="#">Orders</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-          <% if user_signed_in? %>
-            <li>
-              <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-            </li>
-          <% else %>
-            <li><a href="#">Sign In</a></li>
-          <% end %>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active">
+                <%= link_to "Meals", meals_path %></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li><a href="#">Orders</a></li>
+              <li>
+                <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+              </li>
+            <% else %>
+              <li><a href="#">Sign In</a></li>
+            <% end %>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
     <% end %>
 
     <% if notice %>
